--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,7 +34,7 @@ dist.jar=${dist.dir}/JavafxPi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.23-bin.jar=..\\..\\..\\Downloads\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\USER\\Downloads\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
