--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,13 @@
 auxiliary.org-netbeans-modules-projectapi.issue214819_5f_fx_5f_enabled=true
+compile.on.save=true
+do.depend=false
+do.jar=true
+do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\coachingjava\\mysql-connector-java-5.1.23-bin.jar
+javac.debug=true
+javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
-user.properties.file=C:\\Users\\ksaay\\AppData\\Roaming\\NetBeans\\17\\build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\17\\build.properties
