verif livraison , qrcode ,notif , favorite products page

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,14 +33,26 @@ dist.jar=${dist.dir}/JavafxPi.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=activation.jar
+file.reference.controlsfx-8.40.14.jar=controlsfx-8.40.14.jar
+file.reference.javax.mail.jar=javax.mail.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=mysql-connector-java-5.1.23-bin.jar
+file.reference.TrayNotification.jar=TrayNotification.jar
+file.reference.zxing-1.7-javase.jar=zxing-1.7-javase.jar
+file.reference.zxing-core-2.0.jar=zxing-core-2.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}:\
+    ${file.reference.TrayNotification.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.zxing-1.7-javase.jar}:\
+    ${file.reference.zxing-core-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
