--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ endorsed.classpath=
 excludes=
 file.reference.activation.jar=activation.jar
 file.reference.controlsfx-8.40.14.jar=controlsfx-8.40.14.jar
+file.reference.itextpdf-5.5.5.jar=itextpdf-5.5.5.jar
 file.reference.javax.mail.jar=javax.mail.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=mysql-connector-java-5.1.23-bin.jar
 file.reference.TrayNotification.jar=TrayNotification.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.controlsfx-8.40.14.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.zxing-1.7-javase.jar}:\
-    ${file.reference.zxing-core-2.0.jar}
+    ${file.reference.zxing-core-2.0.jar}:\
+    ${file.reference.itextpdf-5.5.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
